[package]
name = "tower-defense"
version = "0.1.0"
authors = ["Albert Ford <albert@albertford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
console_error_panic_hook = { version = "0.1.1", optional = true }
float-ord = "0.2.0"
fnv = "1.0.3"
indexmap = { version = "1.6.1", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"
proptest = "1.0.0"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
