[package]
name = "tower-defense"
version = "0.1.0"
authors = ["Albert Ford <albert@albertford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "1.2.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
float-ord = "0.3.1"
fnv = "1.0.6"
indexmap = { version = "1.6.2", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"
proptest = "1.0.0"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
